tests/snapshots/conformance__i_number_double_huge_neg_exp.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[123.456e-789]
stdout --- 
[123.456e-789]
stderr --- 
<empty>
