tests/snapshots/conformance__i_number_neg_int_huge_exp.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-1e+9999]
stdout --- 
[-1e+9999]
stderr --- 
<empty>
