tests/snapshots/conformance__i_number_pos_double_huge_exp.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1.5e+9999]
stdout --- 
[1.5e+9999]
stderr --- 
<empty>
