tests/snapshots/conformance__i_number_real_neg_overflow.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-123123e100000]
stdout --- 
[-123123e100000]
stderr --- 
<empty>
