tests/snapshots/conformance__i_number_real_underflow.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[123e-10000000]
stdout --- 
[123e-10000000]
stderr --- 
<empty>
