tests/snapshots/conformance__i_number_too_big_neg_int.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-123123123123123123123123123123]
stdout --- 
[-123123123123123123123123123123]
stderr --- 
<empty>
