tests/snapshots/conformance__i_number_too_big_pos_int.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[100000000000000000000]
stdout --- 
[100000000000000000000]
stderr --- 
<empty>
