tests/snapshots/conformance__i_number_very_big_negative_int.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-237462374673276894279832749832423479823246327846]
stdout --- 
[-237462374673276894279832749832423479823246327846]
stderr --- 
<empty>
