tests/snapshots/conformance__i_object_key_lone_2nd_surrogate.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"\uDFAA":0}
stdout --- 
{
    "\uDFAA": 0
}
stderr --- 
<empty>
