tests/snapshots/conformance__i_string_1st_surrogate_but_2nd_missing.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uDADA"]
stdout --- 
["\uDADA"]
stderr --- 
<empty>
